# aiagentplatformPOC

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/: agent_builder.py  template.py  tool_builder.py
